--- a/css/st.action-panel.css
+++ b/css/st.action-panel.css
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:300,400);
+@import url(//fonts.googleapis.com/css?family=Roboto:300,400);
 
-@import url(http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
+@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
 
 .st-actionContainer {
 	z-index: 9999;
